2007-03-06  Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/GSServicesManager.m ([+newWithApplication:]): If the base
	library returns an empty User Library path, try using a default
	one.

2007-03-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBox.m (-initWithFrame:): Set content view via the
	method setContentView: to be independent of super class
	implementation of addSubview:
	* Headers/AppKit/NSWindow.h,
	* Source/NSWindow.m: Add method graphicsContext.
	* Headers/AppKit/NSView.h,
	* Source/NSView.m: Add MacOS 10.4 methods.
	* Source/NSView.m (addSubview:): Implement via
	addSubview:positioned:relativeTo:. Optimize the later method for
	the otherView = nil case.
	* Source/NSView.m (dragPromisedFilesOfTypes:...,
	mouseDownCanMoveWindow, scrollRect:by:, scrollClipView:toPoint:,
	getRectsBeingDrawn:count:, needsToDrawRect:): Implement.  
	* Source/NSView.m (registerForDraggedTypes:) Change order of
	removeDragTypes and addDragTypes, so that overlapping drag types
	get handled correctly.
	* Source/NSView.m (_enclosingClipView): New helper method.
	* Source/NSView.m (enclosingScrollView, scrollRectToVisible:, scrollPoint:): Optimize.
	* Source/NSView.m (displayRectIgnoringOpacity:): Move
	unlockFocusNeedsFlush closer to lockFocusInRect. 
	* Source/NSView.m (_lockFocusInContext:inRect:): New main focus
	locking method. Clip only when wantsDefaultClipping returns YES.
	* Source/NSView.m (releaseGState): Set _allocate_gstate to 0 to
	switch off private gState.
	* Source/NSView.m (_invalidateCoordinates): Call renewGState
	instead of releaseGState.
	* Source/NSView.m (initWithFrame:): Use value from super init call
	and don't set pre-set ivars.
	
2007-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m:
	* Source/NSWorkspace.m:
	Fix usage of NSSearchPathForDirectoriesInDomains() to match new
	filesystem support changes.

2007-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSpellServer.m: deleted